k8s/serviceAccount/df-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: dialogflow-fulfillment
spec:
    selector:
        matchLabels:
            app: dialogflow-fulfillment
    replicas: 1
    template:
        metadata:
            labels:
                app: dialogflow-fulfillment
        spec:
            containers:
            -   name: dialogflow-fulfillment
                image: asia.gcr.io/kalschi-demo-001/conversational-ai-demo:latest
                imagePullPolicy: Always
                ports:
                    -   name: http
                        containerPort: 3000
