k8s/serviceAccount/df-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: dialogflow-fulfillment
spec:
  selector:
    app: dialogflow-fulfillment
  ports:
  - protocol: TCP
    port: 33333
    targetPort: 8080
  type: LoadBalancer
