k8s/serviceAccount/df-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
spec:
  backend:
    serviceName: dialogflow-fulfillment
    servicePort: 8080
